k8s-configuration/istio/namespace.yaml
## namespace.yaml

---
apiVersion: v1
kind: Namespace
metadata:
  name: shippy-grpc
