k8s-configuration/istio/vessel_servicec.yaml
## vessel_servicec.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: vessel
  namespace: istio-system
  labels:
    app: vessel
spec:
#  clusterIP: None
  type: NodePort
  ports:
  - port: 50052
    protocol: TCP
    name: grpc
    targetPort: 50052
  selector:
    app: vessel

---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: vessel
  namespace: istio-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vessel
  template:
    metadata:
      labels:
        app: vessel
    spec:
        containers:
        - name: vessel
#          image: gcr.io/gcptraining-17042017/python-grpc-microservice/vessel:istio_ssl4096
          image: gcr.io/gcptraining-17042017/python-grpc-microservice/vessel:nginx
          imagePullPolicy: Always
          ports:
          - containerPort: 50052
            name: vessel-port
