k8s-configuration/istio/virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
 name: istio-vs
spec:
  hosts:
  - gship.example.com
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        exact: /ui
    - uri:
        exact: /getConsignment
    - uri:
        exact: /getVessel
    route:
    - destination:
        host: client
        port:
          number: 5000
      weight: 100
  - match:
      uri:
        exact: /Vessel/GetVessel
    route:
    - destination:
        host: vessel
        port: 
          number: 50052 # can be omitted if its the only port for reviews
      weight: 100
  - match:
    - uri:
        exact: /Shipping/GetConsignment
    - uri:
        exact: /Shipping/GetVesselForConsignment
    route:
    - destination:
        host: consignment
        port:
          number: 50051
      weight: 100
